--- a/index.html
+++ b/index.html
@@ -194,27 +194,40 @@
             class="text-center my-2"
             style="height: 500px; background: #d3e8d7; border-radius: 24px"
           >
-            <br />
-            <br />
-            <div
-              class="mx-auto"
-              style="
-                height: 180px;
-                width: 180px;
-                border-radius: 100%;
-                background: #fff;
-                box-shadow: 0px 0px 20px rgba(41, 142, 62, 0.25);
-              "
-            >
-              <img src="/img/fame.png" id="serviceicon" alt="" />
+            <div class="bg-dark" style="border-radius: 24px">
+              <br />
+              <br />
+              <div
+                class="mx-auto"
+                style="
+                  height: 180px;
+                  width: 180px;
+                  border-radius: 100%;
+                  background: #fff;
+                  box-shadow: 0px 0px 20px rgba(41, 142, 62, 0.25);
+                "
+              >
+                <img src="/img/fame.png" id="serviceicon" alt="" />
+              </div>
+              <br />
+              <br />
             </div>
-            <br />
-            <br />
-            <h1 class="" style="color: #225d4d">I</h1>
-            <br />
-            <p class="w-75 mx-auto" style="font-size: 24px; font-weight: 500">
-              Bespoke lessons for employees
-            </p>
+            <div class="px-0 text-start pt-2">
+              <a
+                class="ms-0 ps-4 pe-3"
+                style="
+                  color: #ffffff;
+                  background: #225d4d;
+                  font-size: 32px;
+                  text-decoration: none;
+                  border-radius: 0 8px 8px 0;
+                "
+                ><b>1 .</b></a
+              >
+              <p class="w-75 ms-3" style="font-size: 24px; font-weight: 500">
+                Bespoke lessons for employees
+              </p>
+            </div>
           </div>
         </div>
         <div class="col-md-3">
@@ -222,27 +235,40 @@
             class="text-center my-2"
             style="height: 500px; background: #e9eef8; border-radius: 24px"
           >
-            <br />
-            <br />
-            <div
-              class="mx-auto"
-              style="
-                height: 180px;
-                width: 180px;
-                border-radius: 100%;
-                background: #fff;
-                box-shadow: 0px 0px 20px rgba(108, 141, 208, 0.25);
-              "
-            >
-              <img src="/img/workplace.png" id="serviceicon" alt="" />
+            <div class="bg-dark" style="border-radius: 24px">
+              <br />
+              <br />
+              <div
+                class="mx-auto"
+                style="
+                  height: 180px;
+                  width: 180px;
+                  border-radius: 100%;
+                  background: #fff;
+                  box-shadow: 0px 0px 20px rgba(108, 141, 208, 0.25);
+                "
+              >
+                <img src="/img/workplace.png" id="serviceicon" alt="" />
+              </div>
+              <br />
+              <br />
             </div>
-            <br />
-            <br />
-            <h1 class="" style="color: #6c8dd0">II</h1>
-            <br />
-            <p class="w-75 mx-auto" style="font-size: 24px; font-weight: 500">
-              Insights on how to structure their work environment
-            </p>
+            <div class="px-0 text-start pt-2">
+              <a
+                class="ms-0 ps-4 pe-3"
+                style="
+                  color: #ffffff;
+                  background: #6c8dd0;
+                  font-size: 32px;
+                  text-decoration: none;
+                  border-radius: 0 8px 8px 0;
+                "
+                ><b>1 .</b></a
+              >
+              <p class="w-75 ms-3" style="font-size: 24px; font-weight: 500">
+                Insights on how to structure their work environment
+              </p>
+            </div>
           </div>
         </div>
         <div class="col-md-3">
@@ -250,27 +276,40 @@
             class="text-center my-2"
             style="height: 500px; background: #fef8e0; border-radius: 24px"
           >
-            <br />
-            <br />
-            <div
-              class="mx-auto"
-              style="
-                height: 180px;
-                width: 180px;
-                border-radius: 100%;
-                background: #fff;
-                box-shadow: 0px 0px 20px rgba(250, 184, 25, 0.25);
-              "
-            >
-              <img src="/img/meal.svg" id="serviceicon" alt="" />
+            <div class="bg-dark" style="border-radius: 24px">
+              <br />
+              <br />
+              <div
+                class="mx-auto"
+                style="
+                  height: 180px;
+                  width: 180px;
+                  border-radius: 100%;
+                  background: #fff;
+                  box-shadow: 0px 0px 20px rgba(250, 184, 25, 0.25);
+                "
+              >
+                <img src="/img/meal.svg" id="serviceicon" alt="" />
+              </div>
+              <br />
+              <br />
             </div>
-            <br />
-            <br />
-            <h1 class="" style="color: #d66e4f">III</h1>
-            <br />
-            <p class="w-75 mx-auto" style="font-size: 24px; font-weight: 500">
-              Nutrition expert for everyone individually
-            </p>
+            <div class="px-0 text-start pt-2">
+              <a
+                class="ms-0 ps-4 pe-3"
+                style="
+                  color: #ffffff;
+                  background: #d66e4f;
+                  font-size: 32px;
+                  text-decoration: none;
+                  border-radius: 0 8px 8px 0;
+                "
+                ><b>1 .</b></a
+              >
+              <p class="w-75 ms-3" style="font-size: 24px; font-weight: 500">
+                Nutrition expert for everyone individually
+              </p>
+            </div>
           </div>
         </div>
         <div class="col-md-3">
@@ -278,27 +317,40 @@
             class="text-center my-2"
             style="height: 500px; background: #fcdce9; border-radius: 24px"
           >
-            <br />
-            <br />
-            <div
-              class="mx-auto"
-              style="
-                height: 180px;
-                width: 180px;
-                border-radius: 100%;
-                background: #fff;
-                box-shadow: 0px 0px 20px rgba(237, 21, 106, 0.25);
-              "
-            >
-              <img src="/img/mental.png" id="serviceicon" alt="" />
+            <div class="bg-dark" style="border-radius: 24px">
+              <br />
+              <br />
+              <div
+                class="mx-auto"
+                style="
+                  height: 180px;
+                  width: 180px;
+                  border-radius: 100%;
+                  background: #fff;
+                  box-shadow: 0px 0px 20px rgba(237, 21, 106, 0.25);
+                "
+              >
+                <img src="/img/mental.png" id="serviceicon" alt="" />
+              </div>
+              <br />
+              <br />
             </div>
-            <br />
-            <br />
-            <h1 class="" style="color: #ed156a">IV</h1>
-            <br />
-            <p class="w-75 mx-auto" style="font-size: 24px; font-weight: 500">
-              Mental wellness expert
-            </p>
+            <div class="px-0 text-start pt-2">
+              <a
+                class="ms-0 ps-4 pe-3"
+                style="
+                  color: #ffffff;
+                  background: #ed156a;
+                  font-size: 32px;
+                  text-decoration: none;
+                  border-radius: 0 8px 8px 0;
+                "
+                ><b>1 .</b></a
+              >
+              <p class="w-75 ms-3" style="font-size: 24px; font-weight: 500">
+                Mental wellness expert
+              </p>
+            </div>
           </div>
         </div>
       </div>
