--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="col-md-6 px-0" id="landingRight">
           <br id="mobnotbr" />
           <br />
-          <img class="w-100 px-1 pe-0" src="/img/exercise.png" alt="" />
+          <img class="w-100 px-1 pe-0" src="/img/pose.png" alt="" />
         </div>
       </div>
       <div style="height: 160px"></div>
@@ -194,23 +194,28 @@
             class="text-center my-2"
             style="height: 500px; background: #d3e8d7; border-radius: 24px"
           >
-            <div class="" style="border-radius: 24px; background: #225d4d">
-              <br />
-              <br />
+            <div id="bgmtn">
               <div
-                class="mx-auto"
-                style="
-                  height: 180px;
-                  width: 180px;
-                  border-radius: 100%;
-                  background: #fff;
-                  box-shadow: 0px 0px 20px rgba(41, 142, 62, 0.25);
-                "
+                class=""
+                style="border-radius: 24px; background: rgba(34, 93, 77, 0.6)"
               >
-                <img src="/img/fame.png" id="serviceicon" alt="" />
+                <br />
+                <br />
+                <div
+                  class="mx-auto"
+                  style="
+                    height: 180px;
+                    width: 180px;
+                    border-radius: 100%;
+                    background: #fff;
+                    box-shadow: 0px 0px 40px rgba(6, 44, 13, 0.7);
+                  "
+                >
+                  <img src="/img/fame.png" id="serviceicon" alt="" />
+                </div>
+                <br />
+                <br />
               </div>
-              <br />
-              <br />
             </div>
             <div class="px-0 text-start pt-2">
               <a
@@ -235,23 +240,31 @@
             class="text-center my-2"
             style="height: 500px; background: #e9eef8; border-radius: 24px"
           >
-            <div class="" style="border-radius: 24px; background: #6c8dd0">
-              <br />
-              <br />
+            <div id="bgmtn">
               <div
-                class="mx-auto"
+                class=""
                 style="
-                  height: 180px;
-                  width: 180px;
-                  border-radius: 100%;
-                  background: #fff;
-                  box-shadow: 0px 0px 20px rgba(108, 141, 208, 0.25);
+                  border-radius: 24px;
+                  background: rgba(108, 141, 208, 0.7);
                 "
               >
-                <img src="/img/workplace.png" id="serviceicon" alt="" />
+                <br />
+                <br />
+                <div
+                  class="mx-auto"
+                  style="
+                    height: 180px;
+                    width: 180px;
+                    border-radius: 100%;
+                    background: #fff;
+                    box-shadow: 0px 0px 40px rgba(16, 26, 46, 0.75);
+                  "
+                >
+                  <img src="/img/workplace.png" id="serviceicon" alt="" />
+                </div>
+                <br />
+                <br />
               </div>
-              <br />
-              <br />
             </div>
             <div class="px-0 text-start pt-2">
               <a
@@ -276,23 +289,28 @@
             class="text-center my-2"
             style="height: 500px; background: #fef8e0; border-radius: 24px"
           >
-            <div class="" style="border-radius: 24px; background: #d66e4f">
-              <br />
-              <br />
+            <div id="bgmtn">
               <div
-                class="mx-auto"
-                style="
-                  height: 180px;
-                  width: 180px;
-                  border-radius: 100%;
-                  background: #fff;
-                  box-shadow: 0px 0px 20px rgba(250, 184, 25, 0.25);
-                "
+                class=""
+                style="border-radius: 24px; background: rgba(214, 110, 79, 0.7)"
               >
-                <img src="/img/meal.svg" id="serviceicon" alt="" />
+                <br />
+                <br />
+                <div
+                  class="mx-auto"
+                  style="
+                    height: 180px;
+                    width: 180px;
+                    border-radius: 100%;
+                    background: #fff;
+                    box-shadow: 0px 0px 40px rgba(75, 55, 9, 0.75);
+                  "
+                >
+                  <img src="/img/meal.svg" id="serviceicon" alt="" />
+                </div>
+                <br />
+                <br />
               </div>
-              <br />
-              <br />
             </div>
             <div class="px-0 text-start pt-2">
               <a
@@ -317,23 +335,28 @@
             class="text-center my-2"
             style="height: 500px; background: #fcdce9; border-radius: 24px"
           >
-            <div class="" style="border-radius: 24px; background: #ed156a">
-              <br />
-              <br />
+            <div id="bgmtn">
               <div
-                class="mx-auto"
-                style="
-                  height: 180px;
-                  width: 180px;
-                  border-radius: 100%;
-                  background: #fff;
-                  box-shadow: 0px 0px 20px rgba(237, 21, 106, 0.25);
-                "
+                class=""
+                style="border-radius: 24px; background: rgba(237, 21, 107, 0.7)"
               >
-                <img src="/img/mental.png" id="serviceicon" alt="" />
+                <br />
+                <br />
+                <div
+                  class="mx-auto"
+                  style="
+                    height: 180px;
+                    width: 180px;
+                    border-radius: 100%;
+                    background: #fff;
+                    box-shadow: 0px 0px 20px rgba(237, 21, 106, 0.25);
+                  "
+                >
+                  <img src="/img/mental.png" id="serviceicon" alt="" />
+                </div>
+                <br />
+                <br />
               </div>
-              <br />
-              <br />
             </div>
             <div class="px-0 text-start pt-2">
               <a
