--- a/index.html
+++ b/index.html
@@ -521,8 +521,8 @@
               Not investing in health today cuts into your future profit : that
               is how compounding works 😎
             </p>
-            <br />
-            <h4 style="line-height: 48px">
+            <br id="mobnotbr" />
+            <h4 style="line-height: 32px">
               Our Chat-Bot is live on
               <a href=""
                 ><img
@@ -532,13 +532,13 @@
                   alt=""
               /></a>
             </h4>
-            <br />
-            <br />
+            <br id="mobnotbr" />
+            <br id="mobnotbr" />
           </div>
           <div class="col-md-3">
             <p>
               <a
-                class="btn py-0 my-0"
+                class="btn p-0 my-0"
                 style="font-weight: 600; color: #324a5e"
                 href=""
                 >About Logy.ai</a
@@ -546,7 +546,7 @@
             </p>
             <p>
               <a
-                class="btn py-0 my-0"
+                class="btn p-0 my-0"
                 style="font-weight: 600; color: #324a5e"
                 href=""
                 >Support</a
@@ -554,7 +554,7 @@
             </p>
             <p>
               <a
-                class="btn py-0 my-0"
+                class="btn p-0 my-0"
                 style="font-weight: 600; color: #324a5e"
                 href=""
                 >Careers</a
@@ -564,7 +564,7 @@
           <div class="col-md-3">
             <p>
               <a
-                class="btn py-0 my-0"
+                class="btn p-0 my-0"
                 style="font-weight: 600; color: #324a5e"
                 href=""
                 >Contact Business</a
@@ -572,7 +572,7 @@
             </p>
             <p>
               <a
-                class="btn py-0 my-0"
+                class="btn p-0 my-0"
                 style="font-weight: 600; color: #324a5e"
                 href=""
                 >Privacy policy</a
@@ -580,7 +580,7 @@
             </p>
             <p>
               <a
-                class="btn py-0 my-0"
+                class="btn p-0 my-0"
                 style="font-weight: 600; color: #324a5e"
                 href=""
                 >T & C</a
