--- a/index.html
+++ b/index.html
@@ -390,111 +390,167 @@
       <br id="mobnotbr" />
       <br />
       <div class="row">
-        <div class="col-md-6">
-          <div id="testimonyGIFbox">
-            <img
-              id="testimonyGIF"
-              src="/img/people.gif"
-              style="border-radius: 24px"
-              alt=""
-            />
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div id="testimonybox" style="">
-            <div class="row mx-0" style="padding-top: 20px">
-              <div class="col-6" style="height: 200px">
-                <div
-                  id="tesbox"
-                  class="h-100 w-100"
-                  style="border-radius: 24px; background: #d3e8d7"
-                >
-                  <p class="my-2" id="testimony" style="">
-                    <i
-                      class="fa fa-quote-left"
+        <div class="">
+          <div id="testimonybox">
+            <div class="row mx-0">
+              <div class="col-md-6 my-2">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div
+                      id="tesbox"
+                      class="h-100 w-100"
                       style="
-                        font-size: 24px;
-                        color: #324a5ea8;
-                        margin-right: 8px;
+                        border-radius: 24px 0 24px 24px;
+                        background: #d3e8d7;
                       "
-                    ></i>
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry.
-                  </p>
-                  <p id="testimonyGiver" style="color: #324a5e">
-                    <b>Firstname Surname</b>
-                  </p>
+                    >
+                      <p class="my-2" id="testimony" style="">
+                        <i
+                          class="fa fa-quote-left"
+                          style="
+                            font-size: 24px;
+                            color: #324a5ea8;
+                            margin-right: 8px;
+                          "
+                        ></i>
+                        Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry.
+                      </p>
+                      <p id="testimonyGiver" style="color: #324a5e">
+                        <b>Firstname Surname</b>
+                      </p>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <p>
+                      <b>Aim : </b> Lorem ipsum dolor sit amet consectetur
+                      adipisicing elit. Nihil, quibusdam!
+                    </p>
+                    <p>
+                      <b>Achievement : </b> Lorem ipsum dolor sit amet
+                      consectetur adipisicing elit. Nihil, quibusdam!
+                    </p>
+                  </div>
                 </div>
               </div>
-              <div class="col-6" style="height: 200px">
-                <div
-                  id="tesbox"
-                  class="h-100 w-100"
-                  style="border-radius: 24px; background: #e9eef8"
-                >
-                  <p class="my-2" id="testimony" style="">
-                    <i
-                      class="fa fa-quote-left"
+              <div class="col-md-6 my-2">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div
+                      id="tesbox"
+                      class="h-100 w-100"
                       style="
-                        font-size: 24px;
-                        color: #324a5ea8;
-                        margin-right: 8px;
+                        border-radius: 24px 0 24px 24px;
+                        background: #d3e8d7;
                       "
-                    ></i>
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry.
-                  </p>
-                  <p id="testimonyGiver" style="color: #324a5e">
-                    <b>Firstname Surname</b>
-                  </p>
+                    >
+                      <p class="my-2" id="testimony" style="">
+                        <i
+                          class="fa fa-quote-left"
+                          style="
+                            font-size: 24px;
+                            color: #324a5ea8;
+                            margin-right: 8px;
+                          "
+                        ></i>
+                        Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry.
+                      </p>
+                      <p id="testimonyGiver" style="color: #324a5e">
+                        <b>Firstname Surname</b>
+                      </p>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <p>
+                      <b>Aim : </b> Lorem ipsum dolor sit amet consectetur
+                      adipisicing elit. Nihil, quibusdam!
+                    </p>
+                    <p>
+                      <b>Achievement : </b> Lorem ipsum dolor sit amet
+                      consectetur adipisicing elit. Nihil, quibusdam!
+                    </p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="row mx-0" style="padding-top: 40px">
-              <div class="col-6" style="height: 200px">
-                <div
-                  id="tesbox"
-                  class="h-100 w-100"
-                  style="border-radius: 24px; background: #fef8e0"
-                >
-                  <p class="my-2" id="testimony" style="">
-                    <i
-                      class="fa fa-quote-left"
+              <div class="col-md-6 my-2">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div
+                      id="tesbox"
+                      class="h-100 w-100"
                       style="
-                        font-size: 24px;
-                        color: #324a5ea8;
-                        margin-right: 8px;
+                        border-radius: 24px 0 24px 24px;
+                        background: #d3e8d7;
                       "
-                    ></i>
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry.
-                  </p>
-                  <p id="testimonyGiver" style="color: #324a5e">
-                    <b>Firstname Surname</b>
-                  </p>
+                    >
+                      <p class="my-2" id="testimony" style="">
+                        <i
+                          class="fa fa-quote-left"
+                          style="
+                            font-size: 24px;
+                            color: #324a5ea8;
+                            margin-right: 8px;
+                          "
+                        ></i>
+                        Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry.
+                      </p>
+                      <p id="testimonyGiver" style="color: #324a5e">
+                        <b>Firstname Surname</b>
+                      </p>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <p>
+                      <b>Aim : </b> Lorem ipsum dolor sit amet consectetur
+                      adipisicing elit. Nihil, quibusdam!
+                    </p>
+                    <p>
+                      <b>Achievement : </b> Lorem ipsum dolor sit amet
+                      consectetur adipisicing elit. Nihil, quibusdam!
+                    </p>
+                  </div>
                 </div>
               </div>
-              <div class="col-6" style="height: 200px">
-                <div
-                  id="tesbox"
-                  class="h-100 w-100"
-                  style="border-radius: 24px; background: #fcdce9"
-                >
-                  <p class="my-2" id="testimony" style="">
-                    <i
-                      class="fa fa-quote-left"
+              <div class="col-md-6 my-2">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div
+                      id="tesbox"
+                      class="h-100 w-100"
                       style="
-                        font-size: 24px;
-                        color: #324a5ea8;
-                        margin-right: 8px;
+                        border-radius: 24px 0 24px 24px;
+                        background: #d3e8d7;
                       "
-                    ></i>
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry.
-                  </p>
-                  <p id="testimonyGiver" style="color: #324a5e">
-                    <b>Firstname Surname</b>
-                  </p>
+                    >
+                      <p class="my-2" id="testimony" style="">
+                        <i
+                          class="fa fa-quote-left"
+                          style="
+                            font-size: 24px;
+                            color: #324a5ea8;
+                            margin-right: 8px;
+                          "
+                        ></i>
+                        Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry.
+                      </p>
+                      <p id="testimonyGiver" style="color: #324a5e">
+                        <b>Firstname Surname</b>
+                      </p>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <p>
+                      <b>Aim : </b> Lorem ipsum dolor sit amet consectetur
+                      adipisicing elit. Nihil, quibusdam!
+                    </p>
+                    <p>
+                      <b>Achievement : </b> Lorem ipsum dolor sit amet
+                      consectetur adipisicing elit. Nihil, quibusdam!
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
