--- a/index.html
+++ b/index.html
@@ -391,8 +391,8 @@
       <br />
       <div class="row">
         <div class="">
-          <div id="testimonybox">
-            <div class="row mx-0">
+          <div id="testimonybox" bg-primary>
+            <div class="row mx-0" id="testimonyPrime">
               <div class="col-md-6 my-2">
                 <div class="row">
                   <div class="col-md-6">
@@ -404,7 +404,7 @@
                         background: #d3e8d7;
                       "
                     >
-                      <p class="my-2" id="testimony" style="">
+                      <h5 class="my-2" id="testimony" style="">
                         <i
                           class="fa fa-quote-left"
                           style="
@@ -415,21 +415,40 @@
                         ></i>
                         Lorem Ipsum is simply dummy text of the printing and
                         typesetting industry.
-                      </p>
-                      <p id="testimonyGiver" style="color: #324a5e">
+                      </h5>
+                      <h5 id="testimonyGiver" style="color: #324a5e">
                         <b>Firstname Surname</b>
-                      </p>
+                      </h5>
                     </div>
                   </div>
-                  <div class="col-md-6">
-                    <p>
-                      <b>Aim : </b> Lorem ipsum dolor sit amet consectetur
-                      adipisicing elit. Nihil, quibusdam!
+                  <div class="col-md-6 pt-2">
+                    <p class="p-0 m-0" style="color: #324a5e">
+                      <b
+                        ><b style="color: black">Aim : </b> Lorem ipsum dolor</b
+                      >
                     </p>
-                    <p>
-                      <b>Achievement : </b> Lorem ipsum dolor sit amet
-                      consectetur adipisicing elit. Nihil, quibusdam!
+                    <p class="p-0 m-0" style="color: #35d106">
+                      <b
+                        ><b style="color: black">Achievement : </b> Lorem
+                        ipsum</b
+                      >
                     </p>
+                    <div class="progress my-2">
+                      <div
+                        class="progress-bar"
+                        role="progressbar"
+                        style="width: 87%; background: #35d106"
+                        aria-valuenow="87"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                      ></div>
+                    </div>
+                    <h2 style="font-weight: 800">
+                      <span class="h5 me-2" style="color: #6c8dd0"
+                        >Satisfaction score
+                      </span>
+                      87
+                    </h2>
                   </div>
                 </div>
               </div>
@@ -444,7 +463,7 @@
                         background: #d3e8d7;
                       "
                     >
-                      <p class="my-2" id="testimony" style="">
+                      <h5 class="my-2" id="testimony" style="">
                         <i
                           class="fa fa-quote-left"
                           style="
@@ -455,25 +474,43 @@
                         ></i>
                         Lorem Ipsum is simply dummy text of the printing and
                         typesetting industry.
-                      </p>
-                      <p id="testimonyGiver" style="color: #324a5e">
+                      </h5>
+                      <h5 id="testimonyGiver" style="color: #324a5e">
                         <b>Firstname Surname</b>
-                      </p>
+                      </h5>
                     </div>
                   </div>
-                  <div class="col-md-6">
-                    <p>
-                      <b>Aim : </b> Lorem ipsum dolor sit amet consectetur
-                      adipisicing elit. Nihil, quibusdam!
+                  <div class="col-md-6 pt-2">
+                    <p class="p-0 m-0" style="color: #324a5e">
+                      <b
+                        ><b style="color: black">Aim : </b> Lorem ipsum dolor</b
+                      >
                     </p>
-                    <p>
-                      <b>Achievement : </b> Lorem ipsum dolor sit amet
-                      consectetur adipisicing elit. Nihil, quibusdam!
+                    <p class="p-0 m-0" style="color: #35d106">
+                      <b
+                        ><b style="color: black">Achievement : </b> Lorem
+                        ipsum</b
+                      >
                     </p>
+                    <div class="progress my-2">
+                      <div
+                        class="progress-bar"
+                        role="progressbar"
+                        style="width: 60%; background: #35d106"
+                        aria-valuenow="60"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                      ></div>
+                    </div>
+                    <h2 style="font-weight: 800">
+                      <span class="h5 me-2" style="color: #6c8dd0"
+                        >Satisfaction score </span
+                      >60
+                    </h2>
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 my-2">
+              <div class="col-md-6 my-2" id="testimonyPrimeChild">
                 <div class="row">
                   <div class="col-md-6">
                     <div
@@ -484,7 +521,7 @@
                         background: #d3e8d7;
                       "
                     >
-                      <p class="my-2" id="testimony" style="">
+                      <h5 class="my-2" id="testimony" style="">
                         <i
                           class="fa fa-quote-left"
                           style="
@@ -495,25 +532,43 @@
                         ></i>
                         Lorem Ipsum is simply dummy text of the printing and
                         typesetting industry.
-                      </p>
-                      <p id="testimonyGiver" style="color: #324a5e">
+                      </h5>
+                      <h5 id="testimonyGiver" style="color: #324a5e">
                         <b>Firstname Surname</b>
-                      </p>
+                      </h5>
                     </div>
                   </div>
-                  <div class="col-md-6">
-                    <p>
-                      <b>Aim : </b> Lorem ipsum dolor sit amet consectetur
-                      adipisicing elit. Nihil, quibusdam!
+                  <div class="col-md-6 pt-2">
+                    <p class="p-0 m-0" style="color: #324a5e">
+                      <b
+                        ><b style="color: black">Aim : </b> Lorem ipsum dolor</b
+                      >
                     </p>
-                    <p>
-                      <b>Achievement : </b> Lorem ipsum dolor sit amet
-                      consectetur adipisicing elit. Nihil, quibusdam!
+                    <p class="p-0 m-0" style="color: #35d106">
+                      <b
+                        ><b style="color: black">Achievement : </b> Lorem
+                        ipsum</b
+                      >
                     </p>
+                    <div class="progress my-2">
+                      <div
+                        class="progress-bar"
+                        role="progressbar"
+                        style="width: 75%; background: #35d106"
+                        aria-valuenow="75"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                      ></div>
+                    </div>
+                    <h2 style="font-weight: 800">
+                      <span class="h5 me-2" style="color: #6c8dd0"
+                        >Satisfaction score </span
+                      >75
+                    </h2>
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 my-2">
+              <div class="col-md-6 my-2" id="testimonyPrimeChild">
                 <div class="row">
                   <div class="col-md-6">
                     <div
@@ -524,7 +579,7 @@
                         background: #d3e8d7;
                       "
                     >
-                      <p class="my-2" id="testimony" style="">
+                      <h5 class="my-2" id="testimony" style="">
                         <i
                           class="fa fa-quote-left"
                           style="
@@ -535,21 +590,39 @@
                         ></i>
                         Lorem Ipsum is simply dummy text of the printing and
                         typesetting industry.
-                      </p>
-                      <p id="testimonyGiver" style="color: #324a5e">
+                      </h5>
+                      <h5 id="testimonyGiver" style="color: #324a5e">
                         <b>Firstname Surname</b>
-                      </p>
+                      </h5>
                     </div>
                   </div>
-                  <div class="col-md-6">
-                    <p>
-                      <b>Aim : </b> Lorem ipsum dolor sit amet consectetur
-                      adipisicing elit. Nihil, quibusdam!
+                  <div class="col-md-6 pt-2">
+                    <p class="p-0 m-0" style="color: #324a5e">
+                      <b
+                        ><b style="color: black">Aim : </b> Lorem ipsum dolor</b
+                      >
                     </p>
-                    <p>
-                      <b>Achievement : </b> Lorem ipsum dolor sit amet
-                      consectetur adipisicing elit. Nihil, quibusdam!
+                    <p class="p-0 m-0" style="color: #35d106">
+                      <b
+                        ><b style="color: black">Achievement : </b> Lorem
+                        ipsum</b
+                      >
                     </p>
+                    <div class="progress my-2">
+                      <div
+                        class="progress-bar"
+                        role="progressbar"
+                        style="width: 45%; background: #35d106"
+                        aria-valuenow="45"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                      ></div>
+                    </div>
+                    <h2 style="font-weight: 800">
+                      <span class="h5 me-2" style="color: #6c8dd0"
+                        >Satisfaction score </span
+                      >45
+                    </h2>
                   </div>
                 </div>
               </div>
